<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountHomeFragment"
    android:background="@color/primary">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textview_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textview_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:text="TextView" />

    <HorizontalScrollView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="276dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ticker_label" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/current_price_label" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_gain_label" />

                <TextView
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_percent_change_label" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_label" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buying_price_label" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount_label" />

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/net_gain_label" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/percent_change_label" />
            </LinearLayout>

            <ListView
                android:id="@+id/listview_stocks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp" />
        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>