<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="40sp"
            android:id="@+id/textviewMainpageStockName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:text="@string/one_year_label"
            android:id="@+id/button5"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/textviewMainpageStockName" />

        <Button
            android:text="@string/six_month_label"
            android:id="@+id/button4"
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/button5" />

        <Button
            android:text="@string/one_month_label"
            android:id="@+id/button3"
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button4" />

        <Button
            android:id="@+id/button"
            android:text="@string/one_week_label"
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/button3" />

        <Button
            android:id="@+id/button2"
            android:text="@string/one_day_label"
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button" />

        <FrameLayout
            android:id="@+id/fragment_graph"
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:layout_marginTop="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textviewMainpageStockName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>